dark mode: fix category list and deck-learn card

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -20,6 +20,10 @@ body {
     }
   }
 
+  .flip-card-face {
+     background: gray!important;
+   }
+
   hr {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
   }
